--- a/zadanie domowe/zadanie-2/index.html
+++ b/zadanie domowe/zadanie-2/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Moja strona Git Hub Pages</title>
 </head>
 <body>
-    <p>Zadanie nr1 </p>
+    <p>Zadanie nr2</p>
     
     <p>Paragraf na gałęzi master</p>
 </body>
