--- a/warsztaty/projekt-do-poprawy/index.html
+++ b/warsztaty/projekt-do-poprawy/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Warsztaty - HTML5 w praktyce</title>
+    <title>projekt-do-poprawy</title>
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -44,9 +44,9 @@
         ul. Mostowa 6/13<br /> 
         31-061 Kraków<br />
         <p>
-            <a href="mailto:l.badocha@arena108.pl">l.badocha@arena108.pl</a>
+    <a href="mailto:l.badocha@arena108.pl">l.badocha@arena108.pl</a>
         </p>
-    </address>
+        </address>
     </footer>
 
 </body>
