--- a/zadanie-domowe/zadanie-2/index.html
+++ b/zadanie-domowe/zadanie-2/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Moja strona Git Hub Pages</title>
+    <meta name="vieport" content="width=device-width, initial-scale=1.0">
+    <title>Zadanie - responsywny nagłowek</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    <p>Zadanie nr2</p>
-    
-    <p>Paragraf na gałęzi master</p>
+    <header id="main-header">
+       <div>
+           <h2>I am the best</h2>
+           <h1>front-end developer</h1>
+       </div>
+    </header>
 </body>
 </html>
