--- a/zadanie-domowe/zadanie-1/index.html
+++ b/zadanie-domowe/zadanie-1/index.html
@@ -7,41 +7,40 @@
 </head>
 
 <body>
+    <div>
+        <form action="https://formspree.io/alina.pitaichuk@gmail.com" method="POST">
+            <label for="imie">Imię:</label>
+            <input type="text" name="imie" id="imie">
 
-    <form action="https://formspree.io/alina.pitaichuk@gmail.com" method="POST">
-        <label for="imie">Imię</label>
-        <input type="text" name="imie" id="imie"> <br>
+            <label for="last-name">Nazwisko:</label>
+            <input type="text" name="nazwisko" id="last-name">
 
-        <label for="last-name">Nazwisko</label>
-        <input type="text" name="nazwisko" id=last-name> <br>
+            <label for="email">e-mail:</label>
+            <input type="text" name="email" id="email">
 
-        <label for="email">e-mail</label>
-        <input type="text" name="email" id=email> <br>
+            <label for="phone-number">Numer telefonu:</label>
+            <input type="text" name="phone-number" id="phone-number"> <br>
 
-        <label for="phone-number">Numer telefonu</label>
-        <input type="text" name="phone-number" id=phone-number> <br>
-
-           
-        <select>
+            <label for="miasto">Wybierz miasto:</label>
+            <select id="miasto">
             <option value="krakow">Krakow</option>
             <option value="warszawa">Warszawa</option>
             <option value="gdansk">Gdańsk</option>
-        </select> <br>
+        </select>
 
-        <label for="gender">Płeć</label> <br>
-        <input type="radio" name="gender" value="male" checked id=gender> Kobieta<br>
-        <input type="radio" name="gender" value="female" id=gender> Mężczyzna <br>
+            <label for="gender">Płeć:</label>
+            <input type="radio" name="gender" value="male" checked> Kobieta<br>
 
-        <textarea rows="6" cols="50">Wyślij nam wiadomość</textarea> <br>
+            <input type="radio" name="gender" value="female"> Mężczyzna <br>
 
-        <input type="checkbox" name="zgoda" value="zgoda">Wyrażam zgodę na przetwarzanie danych osobowych <br>
+            <textarea rows="7" cols="50">Wyślij nam wiadomość</textarea> <br>
 
-        <label for="submit">Wyślij</label>
-        <input type="button" value="Wyślij" id=submit>  <br>
+            <input type="checkbox" name="zgoda" value="zgoda">Wyrażam zgodę na przetwarzanie danych osobowych <br>
 
-
-
-    </form>
+            <label for="submit">Wyślij</label>
+            <input type="button" value="Wyślij" id=submit>
+        </form>
+    </div>
 </body>
 
 </html>
