--- a/zadanie-domowe/zadanie-1/index.html
+++ b/zadanie-domowe/zadanie-1/index.html
@@ -10,16 +10,16 @@
     <div>
         <form action="https://formspree.io/alina.pitaichuk@gmail.com" method="POST">
             <label for="imie">Imię:</label>
-            <input type="text" name="imie" id="imie">
+            <input type="text" name="imie" id="imie"> <br/>
 
             <label for="last-name">Nazwisko:</label>
-            <input type="text" name="nazwisko" id="last-name">
+            <input type="text" name="nazwisko" id="last-name"> <br/>
 
             <label for="email">e-mail:</label>
-            <input type="text" name="email" id="email">
+            <input type="text" name="email" id="email"> <br/>
 
             <label for="phone-number">Numer telefonu:</label>
-            <input type="text" name="phone-number" id="phone-number"> <br>
+            <input type="text" name="phone-number" id="phone-number"> <br/>
 
             <label for="miasto">Wybierz miasto:</label>
             <select id="miasto">
