--- a/warsztaty/portfolio/index.html
+++ b/warsztaty/portfolio/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-<!-----Navigation-------->
+<!-----Navigation start-------->
     <nav id="main-nav">
         <ul>
             <li class="menu-item"><a ahref="">o mnie</a></li>
@@ -52,7 +52,20 @@
 </section>
     <!--O mnie koniec-->
 <section id="skills">
-   <h2>Umiejętności</h2>
+   <h2>Moje <span>umiejętności</span></h2>
+   
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium repellendus, quidem est quo porro ex obcaecati eius. In perferendis nostrum ducimus ipsam repellat maxime, amet accusantium reiciendis ut! Natus reprehenderit saepe sapiente mollitia, placeat eveniet! Minus sit, quas exercitationem aspernatur.</p>
+   <div id="skills-icons">
+       <figure><img src="icons/css3.png" alt="">
+       <figcaption>CSS3</figcaption>
+       </figure>
+       <figure><img src="icons/html5.png" alt="">
+       <figcaption>HTML5</figcaption></figure>
+       <figure><img src="icons/jquery.png" alt="">
+       <figcaption>JQuery</figcaption></figure>
+       <figure><img src="icons/js.png" alt="">
+       <figcaption>Java Script</figcaption></figure>
+   </div>
     
 </section>
 
