--- a/JS/1-javascript/index.html
+++ b/JS/1-javascript/index.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/8-object-math.js"></script>
+    <script src="js/9-operations.js"></script>
 </body>
 </html>
