--- a/zadanie-domowe/zadanie-1/index.html
+++ b/zadanie-domowe/zadanie-1/index.html
@@ -33,7 +33,7 @@
             <label for="kobieta">Kobieta</label> <br>
 
             <input type="radio" name="gender" id="mężczyzna"> 
-            <label for="mężczyzna">Mężczyzna</label> <br>
+            <label for="mezczyzna">Mężczyzna</label> <br>
             
             
             <label for="wiadomosc">Wiadomość</label>
