--- a/zadanie-domowe/zadanie-1/index.html
+++ b/zadanie-domowe/zadanie-1/index.html
@@ -46,6 +46,7 @@
 
             <input type="button" value="Wyślij" id=submit>
         </form>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis expedita impedit aspernatur fuga odio. Neque perferendis earum odit dolore eos.</p>
     </div>
 </body>
 </html>
