--- a/warsztaty/portfolio/index.html
+++ b/warsztaty/portfolio/index.html
@@ -136,7 +136,7 @@
 
 
 
-<!------CONTACT START------->
+<!------CONTACT/FORM START------->
 
 <section class="contact">
     <div class="contact-data">
@@ -156,14 +156,14 @@
     <div class="contact-form">
        <label for="imie-nazwisko">Imię i nazwisko</label>
        <input type="text" placeholder="Imię i nazwisko" name="imie-nazwisko" id="imie-nazwisko">
-       <label for=""></label>
-       <label for=""></label>
-       <label for=""></label>
+       <textarea rows="7" cols="50">Wyślij nam wiadomość</textarea> <br>
+       <label for="submit"></label>
+       <input type="button" value="Wyślij" id=submit>
         
     </div>
 </section>
 
-<!--------CONTACT END------->
+<!--------CONTACT/FORM END------->
 
 </body>
 </html>
