--- a/zadanie-domowe/zadanie-1/index.html
+++ b/zadanie-domowe/zadanie-1/index.html
@@ -32,7 +32,7 @@
             <input type="radio" name="gender" id="kobieta"> 
             <label for="kobieta">Kobieta</label> <br>
 
-            <input type="radio" name="gender" id="mężczyzna"> 
+            <input type="radio" name="gender" id="mezczyzna"> 
             <label for="mezczyzna">Mężczyzna</label> <br>
             
             
