--- a/budujemy-DOM/index.html
+++ b/budujemy-DOM/index.html
@@ -13,7 +13,7 @@
        </header>
        <div id="parFirst">
            <p>Tekst w tym akapicie</p>
-           <a href="https://akademia108.pl" class="link">Akapit link 1</a>a>
+           <a href="https://akademia108.pl" class="link">Akapit link 1</a>
            <div></div>
            <a href="https://akademia108.pl" class="link">Akapit link 2</a>
        </div>
