--- a/znajdywanie-elementow/index.html
+++ b/znajdywanie-elementow/index.html
@@ -24,8 +24,8 @@
        
        <a href="https://akademia108.pl"></a>
        <a href="#" class="link">Link 2</a>
-       <a href="#" class="link superlink">Link 3</a>
-       <a href="#" class="link superlink">Link 4</a>
+       <a href="#" class="superlink">Link 3</a>
+       <a href="#" class="superlink">Link 4</a>
    </section>
    
    
