--- a/DOM/przyklady/index.html
+++ b/DOM/przyklady/index.html
@@ -29,6 +29,6 @@
    </section>
    
    
-    <script src="js/2-znajdywanie-elemntow.js"></script>
+    <script src="js/3-wezly.js"></script>
 </body>
 </html>
