--- a/DOM/przyklady/index.html
+++ b/DOM/przyklady/index.html
@@ -22,13 +22,13 @@
            <p>Tekst w tym akapicie</p>
        </div>
        
-       <a href="https://akademia108.pl"></a>
-       <a href="#" class="link">Link 2</a>
-       <a href="#" class="superlink">Link 3</a>
-       <a href="#" class="superlink">Link 4</a>
+       <a href="https://akademia108.pl" class="link">Link 1</a>
+       <a href="#" class="link" class="super link">Link 2</a>
+       <a href="#" class="superlink" class="super link">Link 3</a>
+       <a href="#" class="superlink" class="super link">Link 4</a>
    </section>
    
    
-    <script src="js/3-wezly.js"></script>
+    <script src="js/4-tworzenie-wezlow.js"></script>
 </body>
 </html>
