--- a/DOM/przyklady/index.html
+++ b/DOM/przyklady/index.html
@@ -29,6 +29,6 @@
    </section>
    
    
-    <script src="js/4-tworzenie-wezlow.js"></script>
+    <script src="js/5-manipulacja-dom-html.js"></script>
 </body>
 </html>
