--- a/DOM/przyklady/index.html
+++ b/DOM/przyklady/index.html
@@ -11,8 +11,9 @@
            <p>paragraf</p>
            <h1 id="main-header">Header</h1>
        </header>
+       
        <div id="parFirst">
-           <p>Tekst w tym akapicie</p>
+           <p onclick="alert('Event Click z paragrafu');">Tekst w tym akapicie</p>
            <a href="https://akademia108.pl" class="link">Akapit link 1</a>
            <div></div>
            <a href="https://akademia108.pl" class="link">Akapit link 2</a>
@@ -28,7 +29,10 @@
        <a href="#" class="superlink" class="super link">Link 4</a>
    </section>
    
+   <div id="exampleDiv">
+       <a id="exampleLink" href="#">Kliknij</a>
+   </div>
    
-    <script src="js/5-manipulacja-dom-html.js"></script>
+    <script src="js/6-zdarzenie-events.js"></script>
 </body>
 </html>
