--- a/DOM/przyklady/index.html
+++ b/DOM/przyklady/index.html
@@ -33,6 +33,6 @@
        <a id="exampleLink" href="#">Kliknij</a>
    </div>
    
-    <script src="js/6-zdarzenie-events.js"></script>
+    <script src="js/7-objekty.js"></script>
 </body>
 </html>
