--- a/JQUERY/index.html
+++ b/JQUERY/index.html
@@ -14,7 +14,9 @@
         <p class="paragraf">paragraf drugi</p>
     </div>
     <p class="paragrafnext">paragraf drugi</p>
+<!--    JQuery-->
     <script src="js/jquery-3.2.1.min.js"></script>
-
+<!--    JS skrypt-->
+    <script src="js/1-document-redy.js"></script>
 </body>
 </html>
