--- a/JQUERY/index.html
+++ b/JQUERY/index.html
@@ -17,6 +17,6 @@
 <!--    JQuery-->
     <script src="js/jquery-3.2.1.min.js"></script>
 <!--    JS skrypt-->
-    <script src="js/1-document-redy.js"></script>
+    <script src="js/2-selektory.js"></script>
 </body>
 </html>
