3-manipulacja html css

--- a/JQUERY/index.html
+++ b/JQUERY/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="css1/style.css">
 </head>
 <body>
    
@@ -14,9 +15,15 @@
         <p class="paragraf">paragraf drugi</p>
     </div>
     <p class="paragrafnext">paragraf drugi</p>
+    
+<!--START    formularz----------------->
+    <input type="text" name="imie" id="imie" value="Grzegorz">
+
+<!--END    FORMULARZ-------------------->
+    
 <!--    JQuery-->
     <script src="js/jquery-3.2.1.min.js"></script>
 <!--    JS skrypt-->
-    <script src="js/2-selektory.js"></script>
+    <script src="js/3-manipulacja-dom.js"></script>
 </body>
 </html>
