--- a/JQUERY/index.html
+++ b/JQUERY/index.html
@@ -24,6 +24,6 @@
 <!--    JQuery-->
     <script src="js/jquery-3.2.1.min.js"></script>
 <!--    JS skrypt-->
-    <script src="js/3-manipulacja-dom.js"></script>
+    <script src="js/4-find-each.js"></script>
 </body>
 </html>
