--- a/Bootsrap/warsztat/index.html
+++ b/Bootsrap/warsztat/index.html
@@ -10,6 +10,7 @@
 
 <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400i|Montserrat:700|Roboto+Slab&amp;subset=latin-ext" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 
 <!-- style -->
     <link rel="stylesheet" href="css/style-1.css">
@@ -43,7 +44,6 @@
 
 <!--nawigacja END-->
 <!-- header -->
-
 <header id="main-header">
    <div class="header-caption">
    <h3>Lorem ipsum dolor</h3>
@@ -51,10 +51,45 @@
     <button type="button" class="btn btn-info btn-lg">View more</button> 
    </div>
 </header>
-
-
 <!-- header END -->
-   
+<!--services   -->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12">
+            <p class="text-uppercase">Services</p>
+        </div>
+        <div class="col-sm-12">
+            <p>Sed ut perspiciatis...</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4">
+           <div id="kwadrat"><i class="fa fa-briefcase" aria-hidden="true"></i></div>
+            <h3>web developer</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, aut.
+            </p>
+            
+        </div>
+        <div class="col-md-4">
+            <div id="kwadrat"><i class="fa fa-briefcase" aria-hidden="true"></i></div>
+            <h3>web developer</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, aut.
+            </p>
+        </div>
+
+        <div class="col-md-4">
+            <div id="kwadrat"><i class="fa fa-briefcase" aria-hidden="true"></i></div>
+            <h3>web developer</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, aut.
+            </p>
+        </div>
+    </div>
+</div>
+
+
+
+<!--services END   -->
    
    
    
