--- a/Bootsrap/warsztat/index.html
+++ b/Bootsrap/warsztat/index.html
@@ -5,101 +5,307 @@
     <meta charset="UTF-8">
     <title>Document</title>
 
-<!--   bootstrap-->
+    <!--   bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-<!-- Google Fonts -->
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400i|Montserrat:700|Roboto+Slab&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
-<!-- style -->
+    <!-- style -->
     <link rel="stylesheet" href="css/style-1.css">
 </head>
 
 <body>
 
-<!--nawigacja--> 
-<nav id="main-nav" class="navbar navbar-expand-lg navbar-light fixed-top">
-    <a class="navbar-brand" href="#">Bootstrap Project</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <!--nawigacja-->
+    <nav id="main-nav" class="navbar navbar-expand-lg navbar-light fixed-top">
+        <a class="navbar-brand" href="#">Bootstrap Project</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto w-100 justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link" href="#services">Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#portfolio">Portfolio</a> 
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#team">Team</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#contact">Contact</a> 
-            </li>
-        </ul>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto w-100 justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link" href="#services">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#portfolio">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#team">Team</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!--nawigacja END-->
+    <!-- header -->
+    <header id="main-header">
+        <div class="header-caption">
+            <h3>Lorem ipsum dolor</h3>
+            <h2 class="text-uppercase">Lorem ipsum dolor sit</h2>
+            <button type="button" class="btn btn-info btn-lg">View more</button>
+        </div>
+    </header>
+    <!-- header END -->
+    <!--services   -->
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12">
+                <p class="text-uppercase">Services</p>
+            </div>
+            <div class="col-sm-12">
+                <p>Sed ut perspiciatis...</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4">
+                <div id="kwadrat"><i class="fa fa-briefcase" aria-hidden="true"></i></div>
+                <h3>web developer</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, aut.
+                </p>
+
+            </div>
+            <div class="col-md-4">
+                <div id="kwadrat"><i class="fa fa-briefcase" aria-hidden="true"></i></div>
+                <h3>web developer</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, aut.
+                </p>
+            </div>
+
+            <div class="col-md-4">
+                <div id="kwadrat"><i class="fa fa-briefcase" aria-hidden="true"></i></div>
+                <h3>web developer</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, aut.
+                </p>
+            </div>
+        </div>
     </div>
-</nav>
-
-<!--nawigacja END-->
-<!-- header -->
-<header id="main-header">
-   <div class="header-caption">
-   <h3>Lorem ipsum dolor</h3>
-    <h2 class="text-uppercase">Lorem ipsum dolor sit</h2> 
-    <button type="button" class="btn btn-info btn-lg">View more</button> 
-   </div>
-</header>
-<!-- header END -->
-<!--services   -->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-12">
-            <p class="text-uppercase">Services</p>
+    <!--services END   -->
+    <!--  Portfolio -->
+    <div id="container-portfolio">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <h1>Portfolio</h1>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-12">
-            <p>Sed ut perspiciatis...</p>
+
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 item">
+                    <div class="background-image">
+                        <div class="portfolio-image" id="portfolio-image-1">
+                            <div class="portfolio-text">
+                                <h3>Lorem ipsum dolor.</h3>
+                                <p>Lorem ipsum dolor sit.</p>
+                            </div>
+                            <div class="portfolio-mask">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 item">
+                    <div class="background-image">
+                        <div class="portfolio-image" id="portfolio-image-2">
+                            <div class="portfolio-text">
+                                <h3>Lorem ipsum dolor.</h3>
+                                <p>Lorem ipsum dolor sit.</p>
+                            </div>
+                            <div class="portfolio-mask">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 item">
+                    <div class="background-image">
+                        <div class="portfolio-image" id="portfolio-image-3">
+                            <div class="portfolio-text">
+                                <h3>Lorem ipsum dolor.</h3>
+                                <p>Lorem ipsum dolor sit.</p>
+                            </div>
+                            <div class="portfolio-mask">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 item">
+                    <div class="background-image">
+                        <div class="portfolio-image" id="portfolio-image-4">
+
+                            <div class="portfolio-text">
+                                <h3>Lorem ipsum dolor.</h3>
+                                <p>Lorem ipsum dolor sit.</p>
+                            </div>
+                            <div class="portfolio-mask">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 item">
+                    <div class="background-image">
+                        <div class="portfolio-image" id="portfolio-image-5">
+                            <div class="portfolio-text">
+                                <h3>Lorem ipsum dolor.</h3>
+                                <p>Lorem ipsum dolor sit.</p>
+                            </div>
+                            <div class="portfolio-mask">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 item">
+                    <div class="background-image">
+                        <div class="portfolio-image" id="portfolio-image-6">
+                            <div class="portfolio-text">
+                                <h3>Lorem ipsum dolor.</h3>
+                                <p>Lorem ipsum dolor sit.</p>
+                            </div>
+                            <div class="portfolio-mask">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    <!--  Portfolio END-->
+    <!-----------TEAM--------->
 
-    <div class="row">
-        <div class="col-md-4">
-           <div id="kwadrat"><i class="fa fa-briefcase" aria-hidden="true"></i></div>
-            <h3>web developer</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, aut.
-            </p>
-            
-        </div>
-        <div class="col-md-4">
-            <div id="kwadrat"><i class="fa fa-briefcase" aria-hidden="true"></i></div>
-            <h3>web developer</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, aut.
-            </p>
+    <div id="container-team">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <h1>MEET OUR TEAM</h1>
+                </div>
+            </div>
         </div>
 
-        <div class="col-md-4">
-            <div id="kwadrat"><i class="fa fa-briefcase" aria-hidden="true"></i></div>
-            <h3>web developer</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, aut.
-            </p>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 item">
+                    <div class="background-team-image">
+                        <div class="team-image" id="team-image-1"></div>
+                        <div class="team-text">
+                            <h3>Erik Stern</h3>
+                            <p>Account Manager</p>
+                        </div>
+
+                    </div>
+                    <div class="contact-icon">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 item">
+                    <div class="background-team-image">
+                        <div class="team-image" id="team-image-2">
+                        </div>
+                        <div class="team-text">
+                            <h3>Martin Muller</h3>
+                            <p>Developer</p>
+                        </div>
+                        <div class="contact-icon">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 item">
+                    <div class="background-team-image">
+                        <div class="team-image" id="team-image-3"></div>
+                        <div class="team-text">
+                            <h3>Anna Smith</h3>
+                            <p>Project Manager</p>
+                        </div>
+                        <div class="contact-icon">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+
+        <div class="container">
+            <div class="col-lg-12 col-md-12 team-text">
+                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro consequatur ad veritatis, autem accusantium, ducimus.</h4>
+            </div>
+        </div>
+
+<!------------contact form-------------->
+        <section id="contact">
+            <div class="section-content">
+                <h1 class="section-header">Contact us</h1>
+                <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
+            </div>
+            <div class="contact-section">
+                <div class="container">
+                    <form>
+                        <div class="col-md-6 form-line">
+                            <div class="form-group">
+                                <label for="exampleInputUsername">Your name</label>
+                                <input type="text" class="form-control" id="" placeholder=" Enter Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail">Email Address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail" placeholder=" Enter Email id">
+                            </div>
+                            <div class="form-group">
+                                <label for="telephone">Mobile No.</label>
+                                <input type="tel" class="form-control" id="telephone" placeholder=" Enter 10-digit mobile no.">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="description"> Message</label>
+                                <textarea class="form-control" id="description" placeholder="Enter Your Message"></textarea>
+                            </div>
+                            <div>
+                                <button type="button" class="btn btn-info">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+        </section>
+<!----------contact form END------------->
 
 
 
-<!--services END   -->
-   
-   
-   
-       <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.js"
-      integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="js/"></script>
+
+
+
+
+        <!-----------TEAM END--------->
+
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.js" integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="js/"></script>
 </body>
 
 </html>
