--- a/Bootsrap/warsztat/index.html
+++ b/Bootsrap/warsztat/index.html
@@ -210,7 +210,6 @@
                             <h3>Erik Stern</h3>
                             <p>Account Manager</p>
                         </div>
-
                     </div>
                     <div class="contact-icon">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -249,49 +248,85 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="container">
-            <div class="col-lg-12 col-md-12 team-text">
-                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro consequatur ad veritatis, autem accusantium, ducimus.</h4>
+    <div class="container">
+        <div class="col-lg-12 col-md-12 team-text">
+            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro consequatur ad veritatis, autem accusantium, ducimus.</h4>
+        </div>
+    </div>
+    <!-----------TEAM END--------->
+    <!------------contact form-------------->
+    <div id="contact-form">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12 col-lg-12">
+                    <h4 class="h4">Contact Us</h4>
+                    <h5>Lorem ipsum dolor sit amet, consectetur adipisicing.</h5>
+                </div>
             </div>
         </div>
 
-<!------------contact form-------------->
-        <section id="contact">
-            <div class="section-content">
-                <h1 class="section-header">Contact us</h1>
-                <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h4>
-            </div>
-            <div class="contact-section">
-                <div class="container">
-                    <form>
-                        <div class="col-md-6 form-line">
-                            <div class="form-group">
-                                <label for="exampleInputUsername">Your name</label>
-                                <input type="text" class="form-control" id="" placeholder=" Enter Name">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputEmail">Email Address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail" placeholder=" Enter Email id">
-                            </div>
-                            <div class="form-group">
-                                <label for="telephone">Mobile No.</label>
-                                <input type="tel" class="form-control" id="telephone" placeholder=" Enter 10-digit mobile no.">
+        <div class="container">
+
+            <form>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="name"></label>
+                            <input type="text" class="form-control" id="name" placeholder="Your name" required="required">
+                        </div>
+                        <div class="form-group">
+                            <label for="email"></label>
+                            <div class="input-group">
+                                <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
+                                </span>
+                                <input type="email" class="form-control" id="email" placeholder="Your email" required="required">
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="description"> Message</label>
-                                <textarea class="form-control" id="description" placeholder="Enter Your Message"></textarea>
-                            </div>
-                            <div>
-                                <button type="button" class="btn btn-info">Send Message</button>
+                        <div class="form-group">
+                            <label for="email"></label>
+                            <div class="input-group">
+                                <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
+                                </span>
+                                <input type="email" class="form-control" id="email" placeholder="Your phone" required="required">
                             </div>
                         </div>
-                    </form>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="name"></label>
+                            <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required" placeholder="Your message">
+                            </textarea>
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">Send message</button>
+                    </div>
                 </div>
-        </section>
-<!----------contact form END------------->
+            </form>
+        </div>
+    </div>
+    <!----------contact form END------------->
+    <!------------footer------------>
+<div class="container-fluid footer">
+    <div class="row">
+        <div class="col-sm-4">
+            <p>Copyright ®Your website</p>
+        </div>
+        <div class="col-sm-4 contact-icon">
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </div>
+        <div class="col-sm-4 footer-text">
+            <span>Privacy Policy</span>
+            <span class="merms">Term of use</span>
+        </div>
+    </div>
+</div>
+
+    <!------------footer END--------->
 
 
 
@@ -299,13 +334,12 @@
 
 
 
-        <!-----------TEAM END--------->
 
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.js" integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <script src="js/"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.js" integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="js/"></script>
 </body>
 
 </html>
